# netmon

./: .gitignore  CHANGELOG.md  README.md  config.default.yaml  install.sh  netmon  netmon_old.py  pyproject.toml  requirements.txt  setup.py  update.sh
netmon/: __init__.py  __main__.py  cli.py  collector.py  config.py  daemon.py  database.py  display.py  models.py  parser.py  utils.py  webhook.py
scripts/: install.sh
systemd/: netmon.service
