[project]
name = "netmon"
version = "2.1.0"
description = "Application-based network traffic monitor"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Murat"}
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
netmon = "netmon.cli:app"

[build-system]
requires = ["setuptools>=61.0", "wheel", "tomli; python_version < '3.11'"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["netmon"]